--- a/basicCNN.ipynb
+++ b/basicCNN.ipynb
@@ -10,6 +10,27 @@
      "output_type": "stream",
      "text": [
       "WARNING:tensorflow:From c:\\Users\\prans\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import necessary libraries\n",
+    "import tensorflow as tf\n",
+    "from keras import layers, models\n",
+    "from keras.preprocessing.image import ImageDataGenerator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Users\\prans\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
       "\n",
       "Found 2149 images belonging to 2 classes.\n",
       "Found 271 images belonging to 2 classes.\n",
@@ -160,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -168,43 +189,53 @@
      "output_type": "stream",
      "text": [
       "Found 2149 images belonging to 2 classes.\n",
-      "Found 271 images belonging to 2 classes.\n",
+      "Found 272 images belonging to 2 classes.\n",
       "Found 268 images belonging to 2 classes.\n",
+      "WARNING:tensorflow:From c:\\Users\\prans\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\backend.py:873: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\Users\\prans\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\layers\\pooling\\max_pooling2d.py:161: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\Users\\prans\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\optimizers\\__init__.py:309: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+      "\n",
       "Epoch 1/13\n",
-      "68/68 [==============================] - 94s 1s/step - loss: 0.7260 - accuracy: 0.6073 - val_loss: 0.4908 - val_accuracy: 0.7799\n",
+      "WARNING:tensorflow:From c:\\Users\\prans\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\utils\\tf_utils.py:492: The name tf.ragged.RaggedTensorValue is deprecated. Please use tf.compat.v1.ragged.RaggedTensorValue instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\Users\\prans\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\engine\\base_layer_utils.py:384: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
+      "\n",
+      "68/68 [==============================] - 107s 2s/step - loss: 0.6953 - accuracy: 0.5756 - val_loss: 0.5016 - val_accuracy: 0.7649\n",
       "Epoch 2/13\n",
-      "68/68 [==============================] - 81s 1s/step - loss: 0.4748 - accuracy: 0.7748 - val_loss: 0.3023 - val_accuracy: 0.8769\n",
+      "68/68 [==============================] - 63s 926ms/step - loss: 0.4951 - accuracy: 0.7576 - val_loss: 0.3041 - val_accuracy: 0.8619\n",
       "Epoch 3/13\n",
-      "68/68 [==============================] - 87s 1s/step - loss: 0.3240 - accuracy: 0.8660 - val_loss: 0.1428 - val_accuracy: 0.9590\n",
+      "68/68 [==============================] - 69s 1s/step - loss: 0.3530 - accuracy: 0.8506 - val_loss: 0.1559 - val_accuracy: 0.9739\n",
       "Epoch 4/13\n",
-      "68/68 [==============================] - 86s 1s/step - loss: 0.2471 - accuracy: 0.9046 - val_loss: 0.1433 - val_accuracy: 0.9254\n",
+      "68/68 [==============================] - 74s 1s/step - loss: 0.2325 - accuracy: 0.9097 - val_loss: 0.0876 - val_accuracy: 0.9813\n",
       "Epoch 5/13\n",
-      "68/68 [==============================] - 83s 1s/step - loss: 0.1552 - accuracy: 0.9460 - val_loss: 0.0580 - val_accuracy: 0.9888\n",
+      "68/68 [==============================] - 69s 1s/step - loss: 0.1606 - accuracy: 0.9432 - val_loss: 0.0667 - val_accuracy: 0.9739\n",
       "Epoch 6/13\n",
-      "68/68 [==============================] - 78s 1s/step - loss: 0.1142 - accuracy: 0.9623 - val_loss: 0.0419 - val_accuracy: 0.9888\n",
+      "68/68 [==============================] - 76s 1s/step - loss: 0.1395 - accuracy: 0.9577 - val_loss: 0.0192 - val_accuracy: 0.9963\n",
       "Epoch 7/13\n",
-      "68/68 [==============================] - 78s 1s/step - loss: 0.0947 - accuracy: 0.9698 - val_loss: 0.0299 - val_accuracy: 0.9963\n",
+      "68/68 [==============================] - 70s 1s/step - loss: 0.0811 - accuracy: 0.9758 - val_loss: 0.0219 - val_accuracy: 0.9851\n",
       "Epoch 8/13\n",
-      "68/68 [==============================] - 77s 1s/step - loss: 0.0813 - accuracy: 0.9735 - val_loss: 0.0437 - val_accuracy: 0.9888\n",
+      "68/68 [==============================] - 69s 1s/step - loss: 0.0727 - accuracy: 0.9749 - val_loss: 0.0164 - val_accuracy: 0.9963\n",
       "Epoch 9/13\n",
-      "68/68 [==============================] - 86s 1s/step - loss: 0.0612 - accuracy: 0.9767 - val_loss: 0.0073 - val_accuracy: 1.0000\n",
+      "68/68 [==============================] - 75s 1s/step - loss: 0.0556 - accuracy: 0.9832 - val_loss: 0.0019 - val_accuracy: 1.0000\n",
       "Epoch 10/13\n",
-      "68/68 [==============================] - 85s 1s/step - loss: 0.0392 - accuracy: 0.9884 - val_loss: 0.0071 - val_accuracy: 1.0000\n",
+      "68/68 [==============================] - 71s 1s/step - loss: 0.0642 - accuracy: 0.9744 - val_loss: 0.0155 - val_accuracy: 0.9925\n",
       "Epoch 11/13\n",
-      "68/68 [==============================] - 79s 1s/step - loss: 0.0566 - accuracy: 0.9851 - val_loss: 0.0077 - val_accuracy: 1.0000\n",
+      "68/68 [==============================] - 70s 1s/step - loss: 0.0473 - accuracy: 0.9860 - val_loss: 0.0048 - val_accuracy: 1.0000\n",
       "Epoch 12/13\n",
-      "68/68 [==============================] - 68s 994ms/step - loss: 0.0361 - accuracy: 0.9870 - val_loss: 0.0064 - val_accuracy: 0.9963\n",
+      "68/68 [==============================] - 69s 1s/step - loss: 0.0454 - accuracy: 0.9805 - val_loss: 0.0080 - val_accuracy: 0.9963\n",
       "Epoch 13/13\n",
-      "68/68 [==============================] - 66s 967ms/step - loss: 0.0340 - accuracy: 0.9865 - val_loss: 0.0039 - val_accuracy: 1.0000\n"
+      "68/68 [==============================] - 71s 1s/step - loss: 0.0300 - accuracy: 0.9912 - val_loss: 0.0013 - val_accuracy: 1.0000\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.History at 0x15534f4d850>"
+       "<keras.src.callbacks.History at 0x2681c6f3750>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,6 +298,24 @@
     "\n",
     "# Save the trained model\n",
     "# model.save('drowsiness_detection_model.h5')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\prans\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\engine\\training.py:3103: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
+      "  saving_api.save_model(\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.save('drowsiness_detection_model.h5')"
    ]
   },
   {
