--- a/ResNet.ipynb
+++ b/ResNet.ipynb
@@ -367,6 +367,163 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 2149 images belonging to 2 classes.\n",
+      "Found 272 images belonging to 2 classes.\n",
+      "Found 268 images belonging to 2 classes.\n",
+      "WARNING:tensorflow:From c:\\Users\\prans\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\backend.py:1398: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\Users\\prans\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\layers\\normalization\\batch_normalization.py:979: The name tf.nn.fused_batch_norm is deprecated. Please use tf.compat.v1.nn.fused_batch_norm instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\Users\\prans\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\optimizers\\__init__.py:309: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+      "\n",
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " resnet50 (Functional)       (None, 7, 7, 2048)        23587712  \n",
+      "                                                                 \n",
+      " global_average_pooling2d (  (None, 2048)              0         \n",
+      " GlobalAveragePooling2D)                                         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 1)                 2049      \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 23589761 (89.99 MB)\n",
+      "Trainable params: 2049 (8.00 KB)\n",
+      "Non-trainable params: 23587712 (89.98 MB)\n",
+      "_________________________________________________________________\n",
+      "Epoch 1/20\n",
+      "WARNING:tensorflow:From c:\\Users\\prans\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\utils\\tf_utils.py:492: The name tf.ragged.RaggedTensorValue is deprecated. Please use tf.compat.v1.ragged.RaggedTensorValue instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\Users\\prans\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\engine\\base_layer_utils.py:384: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
+      "\n",
+      "34/34 [==============================] - 141s 4s/step - loss: 0.7418 - accuracy: 0.5147 - val_loss: 0.6913 - val_accuracy: 0.4853\n",
+      "Epoch 2/20\n",
+      "34/34 [==============================] - 109s 3s/step - loss: 0.6869 - accuracy: 0.5444 - val_loss: 0.6871 - val_accuracy: 0.5515\n",
+      "Epoch 3/20\n",
+      "34/34 [==============================] - 110s 3s/step - loss: 0.6857 - accuracy: 0.5654 - val_loss: 0.6823 - val_accuracy: 0.5368\n",
+      "Epoch 4/20\n",
+      "34/34 [==============================] - 112s 3s/step - loss: 0.6836 - accuracy: 0.5570 - val_loss: 0.6794 - val_accuracy: 0.6287\n",
+      "Epoch 5/20\n",
+      "34/34 [==============================] - 112s 3s/step - loss: 0.6823 - accuracy: 0.5631 - val_loss: 0.6744 - val_accuracy: 0.6140\n",
+      "Epoch 6/20\n",
+      "34/34 [==============================] - 113s 3s/step - loss: 0.6794 - accuracy: 0.5686 - val_loss: 0.6719 - val_accuracy: 0.6140\n",
+      "Epoch 7/20\n",
+      "34/34 [==============================] - 114s 3s/step - loss: 0.6774 - accuracy: 0.5696 - val_loss: 0.6701 - val_accuracy: 0.6066\n",
+      "Epoch 8/20\n",
+      "34/34 [==============================] - 115s 3s/step - loss: 0.6779 - accuracy: 0.5752 - val_loss: 0.6706 - val_accuracy: 0.6397\n",
+      "Epoch 9/20\n",
+      "34/34 [==============================] - 115s 3s/step - loss: 0.6741 - accuracy: 0.5812 - val_loss: 0.6658 - val_accuracy: 0.6176\n",
+      "Epoch 10/20\n",
+      "34/34 [==============================] - 115s 3s/step - loss: 0.6739 - accuracy: 0.5761 - val_loss: 0.6624 - val_accuracy: 0.6103\n",
+      "Epoch 11/20\n",
+      "34/34 [==============================] - 120s 4s/step - loss: 0.6751 - accuracy: 0.5900 - val_loss: 0.6602 - val_accuracy: 0.6287\n",
+      "Epoch 12/20\n",
+      "34/34 [==============================] - 123s 4s/step - loss: 0.6705 - accuracy: 0.5919 - val_loss: 0.6584 - val_accuracy: 0.6213\n",
+      "Epoch 13/20\n",
+      "34/34 [==============================] - 122s 4s/step - loss: 0.6689 - accuracy: 0.5872 - val_loss: 0.6569 - val_accuracy: 0.6213\n",
+      "Epoch 14/20\n",
+      "34/34 [==============================] - 121s 4s/step - loss: 0.6668 - accuracy: 0.5924 - val_loss: 0.6552 - val_accuracy: 0.6213\n",
+      "Epoch 15/20\n",
+      "34/34 [==============================] - 121s 4s/step - loss: 0.6677 - accuracy: 0.5933 - val_loss: 0.6547 - val_accuracy: 0.6434\n",
+      "Epoch 16/20\n",
+      "34/34 [==============================] - 139s 4s/step - loss: 0.6685 - accuracy: 0.5919 - val_loss: 0.6512 - val_accuracy: 0.6324\n",
+      "Epoch 17/20\n",
+      "34/34 [==============================] - 151s 4s/step - loss: 0.6638 - accuracy: 0.6007 - val_loss: 0.6496 - val_accuracy: 0.6176\n",
+      "Epoch 18/20\n",
+      "34/34 [==============================] - 137s 4s/step - loss: 0.6630 - accuracy: 0.5938 - val_loss: 0.6481 - val_accuracy: 0.6176\n",
+      "Epoch 19/20\n",
+      "34/34 [==============================] - 137s 4s/step - loss: 0.6611 - accuracy: 0.6021 - val_loss: 0.6565 - val_accuracy: 0.5588\n",
+      "Epoch 20/20\n",
+      "34/34 [==============================] - 120s 4s/step - loss: 0.6625 - accuracy: 0.6068 - val_loss: 0.6492 - val_accuracy: 0.6507\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\prans\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\engine\\training.py:3103: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
+      "  saving_api.save_model(\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "from keras.preprocessing.image import ImageDataGenerator\n",
+    "from keras.applications import ResNet50\n",
+    "from keras import layers, models\n",
+    "\n",
+    "# Define paths to your dataset\n",
+    "train_data_dir = './train'\n",
+    "test_data_dir = './test'\n",
+    "val_data_dir = './val'\n",
+    "\n",
+    "# Set parameters\n",
+    "img_width, img_height = 224, 224\n",
+    "batch_size = 64\n",
+    "epochs = 20\n",
+    "\n",
+    "# Create data generators\n",
+    "train_datagen = ImageDataGenerator(rescale=1./255, shear_range=0.2, zoom_range=0.2, horizontal_flip=True)\n",
+    "test_datagen = ImageDataGenerator(rescale=1./255)\n",
+    "val_datagen = ImageDataGenerator(rescale=1./255)\n",
+    "\n",
+    "train_generator = train_datagen.flow_from_directory(\n",
+    "    train_data_dir,\n",
+    "    target_size=(img_width, img_height),\n",
+    "    batch_size=batch_size,\n",
+    "    class_mode='binary'  # assuming binary classification (drowsy and non-drowsy)\n",
+    ")\n",
+    "\n",
+    "test_generator = test_datagen.flow_from_directory(\n",
+    "    test_data_dir,\n",
+    "    target_size=(img_width, img_height),\n",
+    "    batch_size=batch_size,\n",
+    "    class_mode='binary'\n",
+    ")\n",
+    "\n",
+    "val_generator = val_datagen.flow_from_directory(\n",
+    "    val_data_dir,\n",
+    "    target_size=(img_width, img_height),\n",
+    "    batch_size=batch_size,\n",
+    "    class_mode='binary'\n",
+    ")\n",
+    "\n",
+    "# Load ResNet50 pre-trained model\n",
+    "base_model = ResNet50(weights='imagenet', include_top=False, input_shape=(img_width, img_height, 3))\n",
+    "\n",
+    "# Freeze the convolutional layers\n",
+    "base_model.trainable = False\n",
+    "\n",
+    "# Create a new model on top\n",
+    "model = models.Sequential([\n",
+    "    base_model,\n",
+    "    layers.GlobalAveragePooling2D(),\n",
+    "    layers.Dense(1, activation='sigmoid')  # Binary classification\n",
+    "])\n",
+    "\n",
+    "# Compile the model\n",
+    "model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "# Display the model summary\n",
+    "model.summary()\n",
+    "\n",
+    "# Train the model\n",
+    "history = model.fit(train_generator, epochs=epochs, validation_data=test_generator)\n",
+    "\n",
+    "# Save the trained model\n",
+    "model.save('30_11_2023_(17_57)_drowsiness_detection_resnet.h5')"
+   ]
   }
  ],
  "metadata": {
